chore: Update application name and description from 'Nuxt Fusion' to 'Petit Bureaux' in configuration files

--- a/i18n/locales/fr/app.json
+++ b/i18n/locales/fr/app.json
@@ -1,6 +1,6 @@
 {
     "app": {
-        "name": "Nuxt Fusion",
-        "description": "La solution complète pour des applications web sécurisées, performantes et riches en fonctionnalités, avec la puissance de Nuxt."
+        "name": "Petit Bureaux",
+        "description": "Accédez à tous les bureaux du marché. Votre conseiller vous accompagne en visite et vous aide à négocier. Le tout gratuitement."
     }
 }
