feat: Implement admin authentication and dashboard features with Supabase integration

--- a/i18n/locales/fr/sider.json
+++ b/i18n/locales/fr/sider.json
@@ -6,8 +6,9 @@
             "dashboard": "Tableau de bord",
             "pinia": "Pinia",
             "techs": "Technologies",
-            "signIn": "Connexion",
-            "register": "Inscription"
+            "adminLogin": "Administration",
+            "register": "Inscription",
+            "adminDashboard": "Administration"
         }
     }
 }
